--- a/src/styles/requestForm.css
+++ b/src/styles/requestForm.css
@@ -1,3 +1,6 @@
+li {
+    list-style: none;
+}
 
 .field {
     display: flex; 
@@ -17,7 +20,7 @@
 }
 
 button {
-    margin: 1rem 0 0 0;
+    margin: 0.3rem 0 0.3rem 0;
     padding: 0.5rem;
     background-color: rgb(3, 19, 241);
     color: whitesmoke;
@@ -25,6 +28,17 @@ button {
     font-family: 'Recursive', sans-serif;
 }
 
-.serviceRequests {
-    padding: 0.5rem;
+.serviceRequests h2 { 
+    background-color: greenyellow;
+}
+
+.requests-container {
+    display: flex; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+}
+
+.plumbers {
+  
 }
